# accounting_spec

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: accounting_spec.md  action_model.md  domain_model.md  specula_guide.md
src/: main.rs
src/application/: service.rs
src/domain/: entity.rs  repository.rs  value_object.rs
src/infrastructure/: in_memory.rs
